@@ -25,7 +25,7 @@
  */
 
 /*
- * $Id: bsdtcp-security.c,v 1.7.2.1 2006/09/12 14:30:47 martinea Exp $
+ * $Id: bsdtcp-security.c,v 1.7.2.2 2006/09/29 11:28:55 martinea Exp $
  *
  * bsdtcp-security.c - security and transport over bsdtcp or a bsdtcp-like command.
  *
@@ -195,11 +195,17 @@ bsdtcp_accept(
     struct hostent *he;
 
     len = sizeof(sin);
-    if (getpeername(in, (struct sockaddr *)&sin, &len) < 0)
+    if (getpeername(in, (struct sockaddr *)&sin, &len) < 0) {
+	dbprintf(("%s: getpeername returned: %s\n", debug_prefix_time(NULL),
+		  strerror(errno)));
 	return;
+    }
     he = gethostbyaddr((void *)&sin.sin_addr, sizeof(sin.sin_addr), AF_INET);
-    if (he == NULL)
+    if (he == NULL) {
+	dbprintf(("%s: he returned NULL: h_errno = %d\n",
+		  debug_prefix_time(NULL), h_errno));
 	return;
+    }
 
     rc = sec_tcp_conn_get(he->h_name, 0);
     rc->recv_security_ok = &bsd_recv_security_ok;
